tests/baselines/reference/getJavaScriptSyntacticDiagnostics10.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics10.ts':
/tests/cases/fourslash/a.js(1,12): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    function F<T>() { }
               ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.